--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </div>
     </div>
 
-    <script src="/maquetaTienda/scripts/script.js"></script>
+    <script src="/scripts/script.js"></script>
 
 </body>
 
