--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="icon" href="imagenes/favicon.png" type="image/png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="styles/style.css" rel="stylesheet" type="text/css">
-    <title>Citas</title>
+    <link href="./styles/style.css" rel="stylesheet" type="text/css">
+    <title>Alimentos</title>
 </head>
 
 <body>
