--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div>
         <label class="label">Buscar por nombre</label>
         <input id="inputBuscar">
-        <button id="btnBuscar">Buscar</button>
+        <button id="btnBuscar" onclick="busqueda()">Buscar</button>
     </div>
 
     <div id="busqueda"></div>
